Fixed about section line spacing

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -30,6 +30,7 @@ h2 {
 }
 
 .about-text {
+    @include font(1rem, 1.75rem);
     text-align: justify;
 
     p:not(:last-child) {
@@ -132,6 +133,13 @@ h2 {
             border: 2px groove var(--accent-colour);
             background: var(--body-background);
         }
+    }
+}
+
+@media (max-width: 1260px) {
+
+    .about-text {
+        @include font(0.9rem, 1.5rem);
     }
 }
 
